--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 on:
   schedule: 
     # runs once a week on sunday
-    - cron: "55 23 * * 0"
+    - cron: "35 13 24 02 *"
     
 jobs:
   # This workflow contains a single job called "traffic"
