--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 on:
   schedule: 
     # runs once a week on sunday
-    - cron: "45 10 24 02 *"
+    - cron: "0 * * * *"
     
 jobs:
   # This workflow contains a single job called "traffic"
